--- a/index.html
+++ b/index.html
@@ -3,8 +3,13 @@
 <head>
     <link rel="stylesheet" href="style.css">
     <title>REMOTE TECH US</title>
+    <script defer data-domain="remote-tech.us" src="https://earnhardt-plausible.duckdns.org/js/script.js"></script>
 </head>
-
 <body>
 </body>
+<h1>
+<a href="https://pm.remote-tech.us">Project Management</a>
+<a href="https://earnhardt-kban.duckdns.org">Kanboard</a>
+<a href="https://earnhardt-dashy.duckdns.org">Research by Dashy</a>
+</h1>
 </html>
