--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <a href="https://pm.remote-tech.us">Project Management</a>
 <a href="https://earnhardt-kban.duckdns.org">Kanboard</a>
 <a href="https://earnhardt-dashy.duckdns.org">Research by Dashy</a>
-<a href="https://earnhardt-gitea.duckdns.org">Git with a some tea</a><br>
+<a href="https://earnhardt-gitea.duckdns.org">Git with a cup of tea</a><br>
 <center><a href="https://cal.com/remote-tech.us">Schedule a meeting to discuss oppertunites</a></center>
 </h1>
 </html>
