--- a/index.html
+++ b/index.html
@@ -12,6 +12,6 @@
 <a href="https://earnhardt-kban.duckdns.org">Kanboard</a>
 <a href="https://earnhardt-dashy.duckdns.org">Research by Dashy</a>
 <a href="https://earnhardt-gitea.duckdns.org">Git with a cup of tea</a><br>
-<center><a href="https://cal.com/remote-tech.us">Schedule a meeting to discuss oppertunites</a></center>
+<center><a href="https://cal.com/remote-tech.us">Schedule a meeting to discuss opportunites</a></center>
 </h1>
 </html>
