--- a/index.html
+++ b/index.html
@@ -9,9 +9,13 @@
 </body>
 <h1>
 <a href="https://pm.remote-tech.us">Project Management</a>
-<a href="https://earnhardt-kban.duckdns.org">Kanboard</a>
-<a href="https://earnhardt-dashy.duckdns.org">Research by Dashy</a>
-<a href="https://earnhardt-gitea.duckdns.org">Git with a cup of tea</a><br>
+<a href="https://kanboard.remote-tech.us">Kanboard</a>
+<a href="https://dashy.remote-tech.us">Research by Dashy</a>
+<a href="https://gitea.remote-tech.us">Git with a cup of tea</a><br>
 <center><a href="https://cal.com/remote-tech.us">Schedule a meeting to discuss opportunites</a></center>
+<video width="320" height="240" controls>
+  <source src="img/globe.mp4" type="video/mp4">
+  Your browser does not support the video tag.
+</video>
 </h1>
 </html>
