--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <a href="https://dashy.remote-tech.us">Research by Dashy</a>
 <a href="https://gitea.remote-tech.us">Git with a cup of tea</a><br>
 <center><a href="https://cal.com/remote-tech.us">Schedule a meeting to discuss opportunites</a></center>
-<video width="320" height="240" controls>
+<video width="320" height="240" autoplay>
   <source src="img/globe.mp4" type="video/mp4">
   Your browser does not support the video tag.
 </video>
